--- a/index.html
+++ b/index.html
@@ -18,6 +18,6 @@
     <svg class="user-nav__icon">
       <use xLink:href="sprite.svg#check_circle_black_24dp"></use>
     </svg>
-    <p>GitHub</p>
+    <p>GitHub 18val</p>
   </body>
 </html>
