Added new navigation tags

--- a/index.html
+++ b/index.html
@@ -4,20 +4,119 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <link
+      href="https://fonts.googleapis.com/css2?family=Karla:ital,wght@0,400;0,600;1,300&display=swap"
+      rel="stylesheet"
+    />
+
     <meta
       name="description"
       content="Twitter is an American microblogging and social networking service on which users post and interact with messages known as tweets"
     />
 
     <link rel="stylesheet" href="css/style.css" />
-    <title>Document</title>
+    <link rel="shortcut icon" type="image/png" href="img/favicon.png" />
+    <title>Home &zwnj; &frasl; &zwnj; Twitter</title>
   </head>
+  <!-- <svg class="user-nav__icon">
+    <use xLink:href="icons/sprite.svg#poll_black_48dp"></use>
+  </svg> -->
 
   <body>
-    <h1>testdsfd d</h1>
-    <svg class="user-nav__icon">
-      <use xLink:href="sprite.svg#check_circle_black_24dp"></use>
-    </svg>
-    <p>GitHub 18val</p>
+    <div class="container">
+      <div class="content">
+        <header class="header">
+          <img src="img/logo.png" alt="twitter clone" class="logo" />
+          <nav class="sidebar">
+            <ul class="side-nav">
+              <li class="side-nav__item">
+                <a href="#" class="side-nav__link">
+                  <svg class="side-nav__icon">
+                    <use xLink:href="icons/sprite.svg#home_black_48dp"></use>
+                  </svg>
+                  <span>Home</span>
+                </a>
+              </li>
+              <li class="side-nav__item">
+                <a href="#" class="side-nav__link">
+                  <svg class="side-nav__icon">
+                    <use xLink:href="icons/sprite.svg#tag_black_48dp"></use>
+                  </svg>
+                  <span>Explore</span>
+                </a>
+              </li>
+              <li class="side-nav__item">
+                <a href="#" class="side-nav__link">
+                  <svg class="side-nav__icon">
+                    <use
+                      xLink:href="icons/sprite.svg#notifications_none_black_48dp"
+                    ></use>
+                  </svg>
+                  <span>Notifications</span>
+                </a>
+              </li>
+              <li class="side-nav__item">
+                <a href="#" class="side-nav__link">
+                  <svg class="side-nav__icon">
+                    <use
+                      xLink:href="icons/sprite.svg#mail_outline_black_48dp"
+                    ></use>
+                  </svg>
+                  <span>Messages</span>
+                </a>
+              </li>
+              <li class="side-nav__item">
+                <a href="#" class="side-nav__link">
+                  <svg class="side-nav__icon">
+                    <use
+                      xLink:href="icons/sprite.svg#bookmark_border_black_48dp"
+                    ></use>
+                  </svg>
+                  <span>Bookmarks</span>
+                </a>
+              </li>
+              <li class="side-nav__item">
+                <a href="#" class="side-nav__link">
+                  <svg class="side-nav__icon">
+                    <use
+                      xLink:href="icons/sprite.svg#list_alt_black_48dp"
+                    ></use>
+                  </svg>
+                  <span>List</span>
+                </a>
+              </li>
+              <li class="side-nav__item">
+                <a href="#" class="side-nav__link">
+                  <svg class="side-nav__icon">
+                    <use
+                      xLink:href="icons/sprite.svg#person_outline_black_48dp"
+                    ></use>
+                  </svg>
+                  <span>Profile</span>
+                </a>
+              </li>
+              <li class="side-nav__item">
+                <a href="#" class="side-nav__link">
+                  <svg class="side-nav__icon">
+                    <use
+                      xLink:href="icons/sprite.svg#more_horiz_black_48dp"
+                    ></use>
+                  </svg>
+                  <span>More</span>
+                </a>
+              </li>
+            </ul>
+          </nav>
+          <a href="#" class="nav-btn">Tweet</a>
+        </header>
+        <div class="account">Algirdas</div>
+      </div>
+
+      <main class="main_view">
+        <div class="tweet">tweet</div>
+        <div class="more_info">more info</div>
+      </main>
+    </div>
   </body>
 </html>
