--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 
   <body>
     <div class="container">
+      <!-- Header start -->
       <header class="header">
         <div class="logo-container">
           <a href="#" title="Home page"
@@ -115,8 +116,25 @@
           </ul>
           <a href="#" class="btn nav-btn">Tweet</a>
         </nav>
-        <div class="account">Algirdas</div>
+
+        <div class="account">
+          <div class="account__icon-container">
+            <svg class="account__icon-user">
+              <use xLink:href="icons/sprite.svg#icon-user1"></use>
+            </svg>
+          </div>
+          <div class="account__name-container">
+            <div><span class="account__name">Algirdas</span></div>
+            <span class="account__name-other">@Algirdas</span>
+          </div>
+          <div class="account__more-container">
+            <svg class="account__icon-more">
+              <use xLink:href="icons/sprite.svg#icon-more-horizontal"></use>
+            </svg>
+          </div>
+        </div>
       </header>
+      <!-- Header end -->
 
       <!-- Tweet feed start -->
       <div class="tweet-feed">
@@ -130,9 +148,11 @@
 
           <!-- Input text start -->
           <div class="form__group">
-            <svg class="form__icon-user">
-              <use xLink:href="icons/sprite.svg#icon-user1"></use>
-            </svg>
+            <div class="form__svg-container">
+              <svg class="form__icon-user">
+                <use xLink:href="icons/sprite.svg#icon-user1"></use>
+              </svg>
+            </div>
             <input
               type="text"
               class="form__input"
@@ -140,7 +160,12 @@
               id="tweet"
               required
             />
-            <label for="tweet" class="form_label">Everyone can reply</label>
+            <div class="form__label-container">
+              <svg class="form__icon-globe">
+                <use xLink:href="icons/sprite.svg#icon-smile"></use>
+              </svg>
+              <label for="tweet" class="form__label">Everyone can reply</label>
+            </div>
           </div>
           <!-- Input text end -->
 
